# tonutils-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  live-tests.yml  pages.yml  release.yml
benches/: protocol.rs  wallet.rs
dev-docs/: README.md
dev-docs/api/: examples.md  public-api.md
dev-docs/architecture/: errors.md  features.md  overview.md
dev-docs/blockchain/: block-config-proof.md  config-params.md  data-model.md  messages.md  sharding.md  tlb-coverage.md
dev-docs/contracts/: abi.md  get-methods.md  messages.md  tep-metadata.md  wallet-v4r2-mnemonics.md  wallet-v5r1.md
dev-docs/crypto/: primitives.md
dev-docs/liteclient/: balancer.md  proofs.md  rate-limiting.md  request-flow.md
dev-docs/network/: adnl-tcp.md  adnl-udp.md  dht.md  global-config.md  overlays.md
dev-docs/operations/: diagnostics.md  source-tracking.md
dev-docs/research/: mempool.md
dev-docs/testing/: benchmarks.md  fixtures.md  strategy.md
dev-docs/tl/: lite-api.md  schema-language.md
dev-docs/tvm/: addresses.md  boc.md  cells.md  dictionaries.md  stack.md  tlb.md
docs/: balancer.md  cli.md  contracts.md  examples.md  getting-started.md  liteclient.md  networking.md  testing.md  tl.md  tvm.md  wallets.md
examples/: adnl_ping.rs  contract_get_method.rs  contract_get_state.rs  custom_contract_blueprint.rs  litebalancer_failover.rs  liteclient_account_state_decode.rs  liteclient_masterchain_info.rs  liteclient_raw_query.rs  network_config.rs  proof_verify.rs  tlb_account_state_roundtrip.rs  tlb_block_wrapper_decode.rs  tlb_config_params_wrapper.rs  tlb_custom_derive.rs  tlb_message_roundtrip.rs  tlb_parse_boc.rs  tlb_read_tx_data.rs  tlb_schema_codegen.rs  tlb_transaction_roundtrip.rs  tvm_boc_decode.rs  tvm_boc_roundtrip.rs  tvm_cell_builder.rs  tvm_dictionary_roundtrip.rs  tvm_stack_run_method.rs  wallet_offline_transfer.rs
examples/common/: mod.rs
fixtures/abi/: contracts.json
fixtures/phase1/: account_message_transaction.json  transaction_descriptions.json
fixtures/tvm/: stack.json
fixtures/wallets/: state_init_addresses.json
scripts/: build-docs-site.sh
src/: README.md  abi.rs  contracts.rs  jetton.rs  lib.rs  main.rs  metadata.rs  nft.rs  utils.rs  wallet.rs  wallet_tests_part1.rs  wallet_tests_part2.rs
src/abi/: codec.rs  fixtures.rs  json.rs  map.rs  model.rs  tests.rs
src/abi_parts/: part1.rs  part2.rs
src/adnl/: crypto.rs  helper_types.rs  mod.rs  tests.rs
src/adnl/primitives/: codec.rs  handshake.rs  mod.rs
src/adnl/wrappers/: builder.rs  mod.rs  peer.rs
src/cli/: abi.rs  args.rs  backend.rs  commands.rs  impl_cli_part1.rs  impl_cli_part2.rs  mod.rs  tests.rs  views.rs  wallet.rs
src/cli/mod_parts/: part1.rs  part2.rs  part3.rs  part4.rs
src/cli/views/: coverage_tests.rs  stack_input_tests.rs
src/client/: base.rs  mod.rs  toncenter_v3.rs
src/contracts/: provider.rs  stack.rs  tests.rs
src/contracts_parts/: part1.rs  part2.rs
src/crc/: mod.rs  tests.rs
src/jetton/: payload.rs  payload_tests.rs
src/liteclient/: balancer.rs  boc.rs  client.rs  client_impl_part1.rs  client_impl_part2.rs  layers.rs  mod.rs  peer.rs  rate_limit.rs  server.rs  tests.rs  types.rs
src/liteclient/balancer/: archive.rs  execute.rs  reliability_tests.rs  selection.rs  state.rs  tests.rs  types.rs
src/liteclient/balancer_parts/: part1.rs  part2.rs  part4.rs
src/liteclient/client/: connection.rs  decode.rs  methods.rs  query.rs
src/liteclient/client_parts/: part1.rs  part2.rs  part3.rs
src/models/: basic.rs  mod.rs  toncenter_v3.rs  traits.rs
src/network_config/: mod.rs  tests.rs
src/nft/: payload.rs  payload_tests.rs  tests.rs  types.rs
src/nft_parts/: part1.rs  part2.rs
src/tl/: adnl.rs  common.rs  error.rs  mod.rs  request.rs  response.rs  schema_check.rs  tests.rs  utils.rs
src/tl/schemas/: lite_api.tl
src/tl/tests/: common.rs  golden.rs
src/tl/tests_parts/: part1.rs  part2.rs
src/tlb/: block.rs  core.rs  fixtures.rs  message.rs  mod.rs  schema.rs  tests.rs  transaction.rs
src/tlb/message/: address.rs  helpers.rs  tests.rs
src/tlb/message/tests/: actions.rs  core.rs
src/tlb/message_parts/: part1.rs  part2.rs  tests_part1.rs  tests_part2.rs
src/tlb/mod_parts/: part1.rs  part2.rs  part3.rs
src/tlb/schemas/: block.tlb  block_phase1.tlb
src/tlb/transaction/: account.rs  helpers.rs  tests.rs
src/tlb/transaction/tests/: account.rs  description.rs
src/tlb/transaction_parts/: part1.rs  part2.rs  part3.rs  tests_part1.rs  tests_part2.rs
src/tvm/: address.rs  boc.rs  builder.rs  cell.rs  dict.rs  mod.rs  slice.rs  stack.rs  tests.rs  uint.rs
src/tvm/boc/: api.rs  tests.rs
src/tvm/boc_parts/: part1.rs  part2.rs
src/tvm/cell/: cell.rs  tests.rs
src/tvm/cell_parts/: part1.rs  part2.rs
src/tvm/dict/: hashmap.rs  labels.rs  tests.rs
src/tvm/dict_parts/: part1.rs  part2.rs  part3.rs
src/wallet/: message.rs  mnemonic.rs  tests.rs  v5r1.rs
src/wallet/tests/: messages.rs  mnemonic.rs
src/wallet_parts/: part1.rs  part2.rs  part3.rs
tonutils-macros/: Cargo.toml
tonutils-macros/src/: lib.rs
tonutils-tlb-derive/: Cargo.toml
tonutils-tlb-derive/src/: lib.rs
