[package]
name = "tonutils-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
base64 = "0.22"
hex = "0.4"
num-bigint = "0.4.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = { version = "3.12", features = ["base64"] }
sha2 = "0.10"
tokio = { version = "1.47.1", features = ["full", "time"] }
byteorder = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = "4.1"
rand = "0.8"
aes = "0.8"
ctr = "0.9"
log = "0.4"
futures = "0.3"
crc = "3.3.0"
thiserror = "2.0.17"
bytes = "1.10.1"
chrono = "0.4"
crc32fast = "1.4"
derivative = "2.2"
tower = { version = "0.5", features = ["make", "util"] }
clap = { version = "4.5", features = ["derive"] }
tokio-tower = "0.6.0"
tokio-util = { version = "0.7.16", features = ["codec"] }
pin-project = "1.1.10"
ureq = { version = "3.1.2", features = ["socks-proxy"] }
pretty_env_logger = "0.5.0"
tl-proto = { version = "0.5.3", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "block_scanner"
path = "examples/blocks/main.rs"
