[package]
name = "tonutils-macros"
version = "1.1.0"
edition = "2024"
description = "Procedural macros for tonutils TL-B and contract helpers."
license = "MIT"
repository = "https://github.com/lapismyt/tonutils-rs"
keywords = ["ton", "blockchain", "tlb", "proc-macro", "sdk"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
